tests/snapshots/validator_snapshots__validator_all@validator-33.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/keywords_are_recognized.of
---
ParserError(
    "unexpected token 'function'",
)
