tests/snapshots/validator_snapshots__validator_all@validator-35.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/non_keyword_literal_becomes_identifier.of
---
ParserError(
    "unexpected token identifier 'structure'",
)
