tests/snapshots/validator_snapshots__validator_all@validator-37.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/pipe_and_or_tokens_are_recognized.of
---
ParserError(
    "unexpected token '|'",
)
