tests/snapshots/validator_snapshots__validator_all@validator-38.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/punctuation_tokens_are_recognized.of
---
ParserError(
    "unexpected token '('",
)
