tests/snapshots/validator_snapshots__validator_all@validator-39.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/scan_number_invalid_float_non_digit_after_dot.of
---
LexerError(
    "invalid number literal '123.'",
)
