tests/snapshots/validator_snapshots__validator_all@validator-4.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/language/04_lambdas.of
---
ValidationErrors(
    [
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "type mismatch in function 'test_module::main' (call to apply arg 0): expected 'int32', found 'int64'",
        "type mismatch in function 'test_module::main' (call to apply arg 1): expected '(int32) -> int32', found 'null'",
        "type mismatch in function 'test_module::main' (call to apply arg 1): expected '(int32) -> int32', found 'null'",
        "module 'test_module' imports unknown module 'of:core'",
        "unknown variable 'print' in function 'test_module::main'",
    ],
)
