tests/snapshots/validator_snapshots__validator_all@validator-42.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/scan_number_valid_int.of
---
ParserError(
    "unexpected token integer '123'",
)
