tests/snapshots/validator_snapshots__validator_all@validator-44.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/slash_starts_comment_when_followed_by_slash.of
---
ParserError(
    "unexpected token comment",
)
