tests/snapshots/validator_snapshots__validator_all@validator-46.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/slash_without_second_slash_is_slash_token.of
---
ParserError(
    "unexpected token '/'",
)
